--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,23 +6,24 @@ body {
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4, a { color: #3f98b5; }
+h1, h2, h3, h4, a { color: #e16f1b; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
+#top-header img { width: 60%; height: auto; }
+#top-header { background-color: #172848; border-bottom: 2px solid #FFF;  }
+#top-header #primary-nav ul li.current_page_item a { background-color: #172848; color: #FFF; }
 #top-header #primary-nav ul li a:hover { background-color: #EAEAEA; }
 #about-subscribe { background-color: #EAEAEA; }
 #about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#headline { background: #172848; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
 .blog-post .post-meta { color: #AAA; }
-.blog-post h3, .blog-post h3 a { color: #4B4B4B; }
+.blog-post h3, .blog-post h3 a { color: #172848; }
 .post-date {
   background: #eaeaea;
   background: -moz-linear-gradient(-45deg,  #eaeaea 0%, #eaeaea 50%, #dddddd 51%, #dddddd 100%); /* FF3.6+ */
@@ -36,24 +37,24 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #172848;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #172848;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #172848; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #4B4B4B; }
+footer #top-footer #social-icons li a:hover { color: #e16f1b; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #f5454a;
+  background-color: #e16f1b;
   color: #FFF;
 }
 input[type="submit"]:hover,
