--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,18 +6,19 @@ body {
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4, a { color: #3f98b5; }
+h1, h2, h3, h4, a { color: #1358cf; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a:hover { background-color: #EAEAEA; }
+#top-header { background-color: #1358cf; border-bottom: 2px solid #1358cf; }
+#top-header #primary-nav ul li a { color: #EAEAEA; }
+#top-header #primary-nav ul li a:hover { background-color: #EAEAEA; color: #1358cf; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #EAEAEA; color: #1358cf; }
 #about-subscribe { background-color: #EAEAEA; }
 #about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#headline { background: #1358cf; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
@@ -36,15 +37,15 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #1358cf;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #1358cf;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #1358cf; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
 footer #top-footer #social-icons li a:hover { color: #4B4B4B; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
@@ -53,10 +54,14 @@ footer #bottom-footer { background-color: #27282C; color: #FFF; }
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #f5454a;
+  background-color: #ffcc00;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #CC3C40;
+  background-color: #d19d00;
 }
+
+/* Custom */
+#primary-nav { padding: 40px 0; }
+@media (max-width: 767px) { #primary-nav { padding: 0 !important; } }
