--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -91,6 +91,7 @@ footer #social-icons li a:hover { -webkit-transition: all .2s ease-in-out; -moz-
 .pagination ul { display: inline-block; *display: inline; margin-bottom: 0; margin-left: 0; -webkit-border-radius: 3px; -moz-border-radius: 3px; border-radius: 3px; *zoom: 1; -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05); }
 .pagination li { display: inline; }
 .pagination a { float: left; padding: 0 14px; line-height: 34px; text-decoration: none; border: 1px solid #e5e5e5; border-left-width: 0; }
+.pagination span { float: left; padding: 0 14px; line-height: 34px; text-decoration: none; border: 1px solid #e5e5e5; border-left-width: 0; }
 .pagination a:hover, .pagination .active a { background-color: #f5f5f5; }
 .pagination .active a { color: #999999; cursor: default; }
 .pagination .disabled span, .pagination .disabled a, .pagination .disabled a:hover { color: #999999; cursor: default; background-color: transparent; }
