--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,19 +6,23 @@ body {
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4, a { color: #3f98b5; }
+h1, h2, h3, h4, a { color: #6774a1; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #6774a1; color: #FFF; }
 #top-header #primary-nav ul li a:hover { background-color: #EAEAEA; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
-#headline h3 { color: #FFF; font-size: 1.5em; }
+#headline h3, #about-subscribe h2 { font-size: 1.6em; color: rgba(181, 155, 58, 0.36); text-shadow: 1px 1px rgba(255, 255, 255, 0.33); }
+#headline .container { padding: 40px 0; }
+#headline, #about-subscribe {
+  background-image: url('../images/slider_man3.png'), url('../images/revslide_2.jpg');
+  background-size: 496px 441px, cover;
+  background-repeat: no-repeat, no-repeat;
+  padding: 50px 0;
+  text-align: center;
+}
 
 /* Post */
 .blog-post .post-meta { color: #AAA; }
@@ -36,27 +40,40 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #6774a1;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #6774a1;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #6774a1; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #4B4B4B; }
+footer #top-footer #social-icons li a:hover { color: #fbecd9; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #f5454a;
-  color: #FFF;
+  background-color: #fbecd9;
+  color: #CBAE8A;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #CC3C40;
+  background-color: #f8dab5;
+}
+
+/* Custom */
+#primary-nav { padding: 18px 0;}
+@media (max-width: 767px) {
+  #primary-nav { padding: 0 !important; }
+  #headline, #about-subscribe { display: none; }
+}
+@media (max-width: 1117px) {
+  #headline h3, #about-subscribe h2  { text-align: right !important; }
+}
+@media (max-width: 1300px) {
+  #headline, #about-subscribe { background-size: 300px 267px, cover; }
 }
