--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -65,3 +65,7 @@ input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
   background-color: #CC3C40;
 }
+
+/* Custom */
+#primary-nav { padding: 50px 0; }
+@media (max-width: 767px) { #primary-nav { padding: 0 !important; } }
