--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,18 +6,27 @@ body {
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4, a { color: #3f98b5; }
+h1, h2, h3, h4, a { color: #3f9ac8; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #3f9ac8; color: #FFF; }
 #top-header #primary-nav ul li a:hover { background-color: #EAEAEA; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#about-subscribe {
+  background-color: #b1dd45;
+  background-image: url("../images/boy.png");
+  background-repeat: no-repeat;
+  background-position: -45px -67px;
+  padding: 30px 0;
+}
+#about-subscribe h2 {
+  font-family: "Just Me Again Down Here", cursive;
+  font-size: 2.5em;
+  color: #FFF;
+}
+#headline { background: #b1dd45; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
@@ -36,27 +45,34 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #3f9ac8;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #3f9ac8;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
-footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #4B4B4B; }
+footer #top-footer {
+  background-color: #EAEAEA;
+  color: #7D7D7D;
+}
+footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #3f9ac8; }
+footer #top-footer #social-icons li a:hover { color: #7D7D7D; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #f5454a;
+  background-color: #3f9ac8;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #CC3C40;
+  background-color: #2E7599;
 }
+
+/* Custom */
+#primary-nav { margin: 10px 0; }
+@media (max-width: 767px) { #primary-nav { margin: 0 !important; } }
