--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,18 +6,17 @@ body {
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4, a { color: #3f98b5; }
+h1, h2, h3, h4, a { color: #2c80ba; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #2c80ba; color: #FFF; }
 #top-header #primary-nav ul li a:hover { background-color: #EAEAEA; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#about-subscribe { background-color: #336e7b; }
+#about-subscribe h2 { color: #FFF; text-transform: uppercase; }
+#headline { background: #2c80ba; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
@@ -36,27 +35,36 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #2c80ba;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #2c80ba;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer {
+  background-color: #2C80BA;
+  background-image: url(../images/footer.jpg);
+  color: #FFF;
+  background-position: center;
+  background-size: cover;
+  -webkit-text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.13);
+  -moz-text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.13);
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.13);
+}
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #4B4B4B; }
+footer #top-footer #social-icons li a:hover { color: #f4d03f; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #f5454a;
+  background-color: #f4d03f;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #CC3C40;
+  background-color: #E3C340;
 }
