--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,22 +1,22 @@
 /* Base */
 body {
-  background-color: #f8f8fa;
+  background-color: #f5f5f5;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4, a { color: #3f98b5; }
+h1, h2, h3, h4, a { color: #86bebf; }
 h1 { font-size: 2em; }
-h2 { font-size: 1.5em; }
+h2 { font-size: 1.5em; text-align: right;}
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; }
+#top-header { border-bottom: 2px solid #aa1726; }
 #top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
 #top-header #primary-nav ul li a:hover { background-color: #EAEAEA; }
-#about-subscribe { background-color: #EAEAEA; }
-#about-subscribe h2 { color: #6B6B6B; }
+#about-subscribe { background-color: #ad1b2e; }
+#about-subscribe h2 { color: #ffffff; font-size: 1.2em; font-weight: lighter; }
 #headline { background: #3f98b5; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
@@ -36,24 +36,24 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #a2202e;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #a2202e;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
-footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
-footer #top-footer #social-icons li a:hover { color: #4B4B4B; }
+footer #top-footer { background-color: #b3b1af; color: #ffffff; }
+footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #ffffff; }
+footer #top-footer #social-icons li a:hover { color: #ad1b2e; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
 
 /* Buttons */
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #f5454a;
+  background-color: #ad1b2e;
   color: #FFF;
 }
 input[type="submit"]:hover,
