--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,18 +6,19 @@ body {
   color: #4B4B4B;
   line-height: 1.7em;
 }
-h1, h2, h3, h4, a { color: #3f98b5; }
+h1, h2, h3, h4, a { color: #506E84; }
 h1 { font-size: 2em; }
 h2 { font-size: 1.5em; }
 h3 { font-size: 1.35em; }
 
 /* Header */
-#top-header { border-bottom: 2px solid #3f98b5; }
-#top-header #primary-nav ul li.current_page_item a { background-color: #3f98b5; color: #FFF; }
-#top-header #primary-nav ul li a:hover { background-color: #EAEAEA; }
+#top-header #primary-nav ul li a { color: #FFF; }
+#top-header #primary-nav ul li.current_page_item a { background-color: #F8F8FA; color: #35739F; }
+#top-header #primary-nav ul li.current_page_item a:hover { color: #FFF; }
+#top-header #primary-nav ul li a:hover { background-color: #3181ae; }
 #about-subscribe { background-color: #EAEAEA; }
 #about-subscribe h2 { color: #6B6B6B; }
-#headline { background: #3f98b5; }
+#headline { background: #506E84; }
 #headline h3 { color: #FFF; font-size: 1.5em; }
 
 /* Post */
@@ -36,15 +37,15 @@ h3 { font-size: 1.35em; }
 }
 .read-more {
   background-color: #EAEAEA;
-  color: #3f98b5;
+  color: #506E84;
 }
 .read-more:hover {
-  background-color: #3f98b5;
+  background-color: #506E84;
   color: #FFF;
 }
 
 /* Footer */
-footer #top-footer { background-color: #3f98b5; color: #FFF; }
+footer #top-footer { background-color: #506E84; color: #FFF; }
 footer #top-footer #social-icons li a, #top-footer h3, #top-footer a { color: #FFF; }
 footer #top-footer #social-icons li a:hover { color: #4B4B4B; }
 footer #bottom-footer { background-color: #27282C; color: #FFF; }
@@ -53,10 +54,118 @@ footer #bottom-footer { background-color: #27282C; color: #FFF; }
 #scroll-top a:hover,
 input[type="submit"],
 #comments .comment-reply-link {
-  background-color: #f5454a;
+  background-color: #80D07F;
   color: #FFF;
 }
 input[type="submit"]:hover,
 #comments .comment-reply-link:hover {
-  background-color: #CC3C40;
+  background-color: #6DC96C;
+}
+
+/* Custom */
+#top-header { background-color: #27282C; }
+#top-header .container { padding: 0; }
+#top-header h1 {
+  font-size: 1em;
+  font-weight: bold;
+  text-indent: 0px;
+  padding: 14px 0;
+  position: inherit;
+}
+#top-header h1 a {
+  background-color: #3181AE;
+  color: #FFF;
+  text-decoration: none;
+  padding: 20px;
+  -webkit-transition: all ease-in-out .2s;
+  -moz-transition: all ease-in-out .2s;
+  transition: all ease-in-out .2s;
+}
+#top-header h1 a:hover { background: #F8F8FA; color: #3181AE; }
+#top-header #primary-nav ul li a {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0;
+  font-size: .9em;
+  padding: 20px;
+}
+#carousel .slide {
+  background-image: url('../images/carousel.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 120px 0;
+  height: 370px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+#carousel .slide .about {
+  background-image: url('../images/dots.png');
+  width: 400px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center;
+}
+#carousel .slide .about h1 a {
+  color: #D0D0D0;
+  line-height: 1.3em;
+  text-decoration: none;
+}
+#carousel .slide .about h1 a:hover { text-decoration: underline; }
+#carousel .slide .about .btn {
+  background: #3181AE;
+  color: #FFF;
+  font-size: .9em;
+  text-decoration: none;
+  padding: 5px 15px;
+  display: inline-block;
+  border-radius: 3px;
+  margin-top: 10px;
+  -webkit-transition: all ease-in-out .2s;
+  -moz-transition: all ease-in-out .2s;
+  transition: all ease-in-out .2s;
+}
+#carousel .slide .about .btn:hover { background: #267496; }
+#carousel .slide .about .btn:active { background: #1f6c8b; }
+.container { max-width: 1500px; }
+#content { padding-left: 20px; padding-right: 0; }
+.loop-posts {
+  -moz-column-count: 2;
+  -webkit-column-count: 2;
+  column-count: 2;
+  -moz-column-width: 50%;
+  -webkit-column-width: 50%;
+  column-width: 50%;
+}
+.loop-posts .blog-post{
+  -webkit-column-break-inside: avoid;
+  -moz-column-break-inside: avoid;
+  column-break-inside: avoid;
+  display: inline-block;
+}
+.blog-post .social {
+  border-right: 1px solid #EAEAEA;
+  border-left: 0;
+  top: 308px;
+  left: 0;
+  margin-left: 0;
+  position: fixed;
+}
+
+/* Custom Responsive */
+@media (max-width: 930px) {
+.loop-posts {
+  -moz-column-count: 1;
+  -webkit-column-count: 1;
+  column-count: 1;
+  -moz-column-width: 0;
+  -webkit-column-width: 0;
+  column-width: 0;
+}
+@media (max-width: 767px) {
+  #content { padding-left: 0; padding-right: 0; }
+}
+@media (max-width: 500px) {
+  #carousel .slide hgroup h1 a { width: 350px; }
 }
