--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -7,8 +7,8 @@ label { font-size: .9em; -webkit-appearance: none; }
 input[type="submit"] { -webkit-appearance: none; border: none; padding: 10px 15px; margin: 0; border-radius: 2px; cursor: pointer; text-transform: uppercase; }
 input[type="text"], input[type="search"], input[type="email"] { padding: 9px; border-radius: 2px; border: 1px solid #C0C0C0; }
 .blog-post ul li { list-style-type: disc; list-style-position: inside; }
-.search-field { width: 58%;}
-.search-submit { width: 38%; text-align: center; -webkit-appearance: none; }
+.search-field { width: 80%;}
+.search-submit { text-align: center; -webkit-appearance: none; }
 
 /* Structure */
 #content { padding-right: 20px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; }
@@ -37,7 +37,7 @@ input[type="text"], input[type="search"], input[type="email"] { padding: 9px; bo
 /* Blog Post */
 .blog-post, .sidebar-widget { margin-bottom: 20px; }
 .blog-post .social { top: 445px; background: #FFF; border-left: 1px solid #EAEAEA; padding: 10px; position: absolute; border-top-left-radius: 3px; margin-left: -90px; border-bottom-left-radius: 3px; }
-.blog-post h3 { margin-bottom: 15px; line-height: 1.5em; font-size: 2em; text-transform: uppercase; font-weight: bold; }
+.blog-post h3 { font-family: 'Open Sans', sans-serif; margin-bottom: 15px; line-height: 1.5em; font-size: 2em; text-transform: uppercase; }
 .blog-post h3 a { text-decoration: none; }
 .blog-post h3 a:hover { text-decoration: underline; }
 .blog-post .wp-post-image { margin-bottom: 15px; }
@@ -60,9 +60,9 @@ input[type="text"], input[type="search"], input[type="email"] { padding: 9px; bo
 #comments .comment { margin-bottom: 30px; }
 #comments .comment:last-child { margin-bottom: 0; }
 #comments .comment .children { margin-left: 65px; border-left: 1px solid #EAEAEA; padding-left: 10px; margin-top: 30px; }
-#comments .comment .comment-meta, #comments .comment p, #comments .comment .reply { margin-left: 65px; } 
+#comments .comment .comment-meta, #comments .comment p, #comments .comment .reply { margin-left: 65px; }
 #comments .comment cite { margin-left: 15px; }
-#comments .comment .comment-meta { background: #F8F8F8; padding: 2px 10px; display: inline-block; font-size: .8em; margin: 5px 15px 10px; } 
+#comments .comment .comment-meta { background: #F8F8F8; padding: 2px 10px; display: inline-block; font-size: .8em; margin: 5px 15px 10px; }
 #comments .comment .avatar { float: left; -webkit-border-radius: 50%; -moz-border-radius: 50%; border-radius: 50%; }
 #comments .comment-reply-link { text-transform: uppercase; text-decoration: none; padding: 5px 15px; display: inline-block; margin-top: 5px; border-radius: 2px; font-size: .8em; }
 #comments #cancel-comment-reply-link { font-size: .7em; float: right; }
