Change max-width container

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -1,4 +1,4 @@
-@media (max-width: 1700px) {
+@media (max-width: 1300px) {
   aside.social {
     border-right: none !important;
     padding: 10px !important;
@@ -16,6 +16,7 @@
 }
 
 @media (max-width: 767px) {
+  .container { padding-left: 0 !important; padding-right: 0 !important; }
   .wpcf7 input[type="text"], .wpcf7 input[type="search"], .wpcf7 input[type="email"] , .wpcf7 textarea { width: 100%; }
   .search-form label { width: 58% !important; }
   .search-form input { width: 40% !important; }
