--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -78,10 +78,10 @@ input[type="submit"]:hover,
   text-transform: uppercase;
 }
 #top-header { background-color: #27282C; }
-#top-header .container { padding: 30px 0; }
+#top-header .container { padding: 30px 15px; }
 #top-header h1 {
   font-family: 'Open Sans', sans-serif;
-  font-size: 1.8em;
+  font-size: 1.85em;
   text-indent: 0px;
   padding: 14px 0;
   position: inherit;
@@ -103,14 +103,14 @@ input[type="submit"]:hover,
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  padding: 120px 0;
+  padding: 240px 0 0;
 }
 #carousel .slide .about {
-  background-image: url('../images/dots.png');
-  width: 400px;
-  margin: 0 auto;
+  background: rgba(0, 0, 0, 0.54);
   padding: 20px;
-  text-align: center;
+}
+#carousel .slide .about .container {
+  padding: 0;
 }
 #carousel .slide .about h1 a {
   font-family: 'Open Sans', sans-serif;
@@ -134,7 +134,6 @@ input[type="submit"]:hover,
 }
 #carousel .slide .about .btn:hover { background: #267496; }
 #carousel .slide .about .btn:active { background: #1f6c8b; }
-.container { max-width: 1500px; }
 #content { padding-left: 20px; padding-right: 0; }
 .loop-posts {
   -moz-column-count: 2;
@@ -154,6 +153,7 @@ input[type="submit"]:hover,
   max-width: 530px;
   width: 100%;
 }
+.single-post .blog-post { overflow: hidden; }
 .single-post .blog-post > img {
   max-width: 450px;
   float: left;
@@ -169,7 +169,7 @@ input[type="submit"]:hover,
 }
 #rd-bar { background-color: #F5F5F5; }
 .rd-container { width: 100%; margin: 0 auto; padding: 13px 0 3px; }
-.rd-container .container { padding: 0; }
+.rd-container .container { padding: 0 15px; }
 #feedburner-form input[type="text"],
 #feedburner-form input[type="submit"] {
   -webkit-box-sizing: border-box;
