--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -82,10 +82,10 @@ footer #social-icons li a { font-size: 3em; margin-left: 5px; }
 footer #social-icons li a { -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
 
 /* Scroll to top */
-#scroll-top a { padding: 4px 10px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; background: #919191; position: fixed; bottom: 48px; right: 32px; display: none; opacity: 0.89; filter: alpha(opacity=89); z-index: 999; text-align: center; }
+#scroll-top a { padding: 4px 10px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; background: #c2b59b; position: fixed; bottom: 48px; right: 32px; display: none; opacity: 0.89; filter: alpha(opacity=89); z-index: 999; text-align: center; }
 #scroll-top a i { font-size: 30px; color: #fff; }
 #scroll-top a, #scroll-top a i { cursor: pointer; -webkit-transition: all .2s ease-in-out; -moz-transition: all .2s ease-in-out; transition: all .2s ease-in-out; }
-#scroll-top a:hover { background-color: #C21502 !important; cursor: pointer; }
+#scroll-top a:hover { background-color: #b11116 !important; cursor: pointer; }
 #scroll-top a:hover i { color: #fff; }
 
 /* Pagination */
