--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -65,6 +65,6 @@ input[type="submit"]:hover,
 
 /* Scroll to top */
 #scroll-top a { background: #177c90; }
-#scroll-top a:hover { background-color: #20819a !important; }
-#scroll-top a i { color: #fff; }
-#scroll-top a:hover i { color: #fff; }
+#scroll-top a:hover { background-color: #20819a; }
+#scroll-top a i { color: #FFF; }
+#scroll-top a:hover i { color: #FFF; }
